Update homepage with improved hero section and mobile menu

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Hero Section -->
     <section
-      class="relative min-h-[70vh] flex items-center justify-center overflow-hidden bg-gradient-to-br from-gray-900 via-sky-900 to-gray-900 dark:from-gray-900 dark:via-sky-900 dark:to-gray-900 light:from-white light:via-sky-100 light:to-white"
+      class="relative pt-16 md:pt-24 pb-12 md:pb-24 flex items-center justify-center overflow-hidden bg-gradient-to-br from-gray-900 via-sky-900 to-gray-900 dark:from-gray-900 dark:via-sky-900 dark:to-gray-900 light:from-white light:via-sky-100 light:to-white"
     >
       <!-- Background Animation -->
       <div class="absolute inset-0">
@@ -89,29 +89,37 @@
         <h2 class="text-4xl font-bold text-center mb-16 dark:text-white light:text-gray-900">
           Why Choose AI Agentopia?
         </h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
           <!-- Feature 1 -->
-          <div class="text-center">
-            <div class="icon-container mb-6">🤖</div>
-            <h3 class="text-2xl font-semibold mb-4 dark:text-white light:text-gray-900">Diverse Agent Ecosystem</h3>
+          <div class="text-center p-6 bg-gray-800/50 rounded-xl hover:bg-gray-800/80 transition-all duration-300">
+            <div class="icon-container mb-6">🔒</div>
+            <h3 class="text-xl font-semibold mb-4 dark:text-white light:text-gray-900">Local-first Private AI</h3>
             <p class="text-gray-400 dark:text-gray-400 light:text-gray-600">
-              Discover AI agents for every need, from automation to creative tasks.
+              Run AI agents locally with Docker containers for complete data privacy and security. Your data stays on your machine.
             </p>
           </div>
           <!-- Feature 2 -->
-          <div class="text-center">
-            <div class="icon-container mb-6">🔄</div>
-            <h3 class="text-2xl font-semibold mb-4 dark:text-white light:text-gray-900">Seamless Integration</h3>
+          <div class="text-center p-6 bg-gray-800/50 rounded-xl hover:bg-gray-800/80 transition-all duration-300">
+            <div class="icon-container mb-6">🌐</div>
+            <h3 class="text-xl font-semibold mb-4 dark:text-white light:text-gray-900">Open & Community Driven</h3>
             <p class="text-gray-400 dark:text-gray-400 light:text-gray-600">
-              Easy-to-use APIs and SDKs for quick integration into your projects.
+              Access a growing collection of open-source AI agents with clear documentation and community-driven improvements.
             </p>
           </div>
           <!-- Feature 3 -->
-          <div class="text-center">
-            <div class="icon-container mb-6">👥</div>
-            <h3 class="text-2xl font-semibold mb-4 dark:text-white light:text-gray-900">Community Driven</h3>
+          <div class="text-center p-6 bg-gray-800/50 rounded-xl hover:bg-gray-800/80 transition-all duration-300">
+            <div class="icon-container mb-6">🔑</div>
+            <h3 class="text-xl font-semibold mb-4 dark:text-white light:text-gray-900">No Hidden Cost Lock-in</h3>
             <p class="text-gray-400 dark:text-gray-400 light:text-gray-600">
-              Join a thriving community of developers and AI enthusiasts.
+              Use your own API keys or local LLM endpoints. Full control over your AI infrastructure and costs.
+            </p>
+          </div>
+          <!-- Feature 4 -->
+          <div class="text-center p-6 bg-gray-800/50 rounded-xl hover:bg-gray-800/80 transition-all duration-300">
+            <div class="icon-container mb-6">🎯</div>
+            <h3 class="text-xl font-semibold mb-4 dark:text-white light:text-gray-900">Diverse & Specialized Agents</h3>
+            <p class="text-gray-400 dark:text-gray-400 light:text-gray-600">
+              Purpose-built AI agents that excel in specific domains, each with clear documentation and setup guides.
             </p>
           </div>
         </div>
