--- a/pages/agent-detail.html
+++ b/pages/agent-detail.html
@@ -9,7 +9,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../images/logo.svg">
   
-  <link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
+  <link href="../css/custom-detail.css" rel="stylesheet">
   <!-- Tailwind CSS CDN for full utility support -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Add Animation Library -->
